--- a/Data/Localizations/Plugins/Emberpelts/nlNL_Emberpelts.csv
+++ b/Data/Localizations/Plugins/Emberpelts/nlNL_Emberpelts.csv
@@ -1,10 +1,12 @@
 ID,Text,Comment
 Faction.Emberpelts.DisplayName,Emberpelts,Name of a faction
 Faction.Emberpelts.Description,"De Emberpelts hebben een affiniteit met de kleur rood en houden ervan om warm te blijven. Soms kijken ze gewoon graag naar dingen die branden.
-Hun motto: <i>Hart van vuur.</i>",Description of a beaver faction
-Bot.DisplayName.Emberpelts,Emberbot {0},Bot name
-Good.Brick.DisplayName,Brick,Item Name
-Good.Brick.PluralDisplayName,Bricks,Plural Item Name
+Hun motto: <i>Harten van vuur.</i>",Description of a beaver faction
+Faction.Emberpelts.WonderCompletionFlavor,"Nadat ze grote rijkdom en kennis hadden verzameld, probeerden je bevers de vruchten van hun arbeid te delen met de lijdende planeet. Helaas ging het allemaal in vlammen op. Je bevers hebben tenminste dingen zien branden!",
+Faction.Emberpelts.WonderCompletionMessage,Gefeliciteerd! Je hebt Emberpelts onder de knie en hebt de grondstoffen van deze kaart gebruikt om het wonder van de factie te bouwen.,
+Bot.DisplayName.Emberpelts,Emberrobot {0},Bot name
+Good.Brick.DisplayName,Baksteen,Item Name
+Good.Brick.PluralDisplayName,Stenen,Plural Item Name
 Good.Clay.DisplayName,Klei,Item Name
 Good.Clay.PluralDisplayName,Klei,Plural Item Name
 Good.Coal.DisplayName,Houtskool,Item Name
@@ -19,8 +21,8 @@ Good.Tomato.DisplayName,Tomaat,
 Good.Tomato.PluralDisplayName,Tomaten,
 Good.TomatoJuice.DisplayName,Tomatensap,
 Good.TomatoJuice.PluralDisplayName,Tomatensap,
-Good.Beetroot.DisplayName,Beet,
-Good.Beetroot.PluralDisplayName,Beets,
+Good.Beetroot.DisplayName,Biet,
+Good.Beetroot.PluralDisplayName,Bieten,
 Good.RedJuice.DisplayName,Bieten- en radijssap,
 Good.RedJuice.PluralDisplayName,Bieten- en radijssap,
 Good.CornJuice.DisplayName,Maïs sap,
@@ -40,67 +42,74 @@ Good.Cornbread.PluralDisplayName,Maïsbrood,
 Good.BakedBeetroot.DisplayName,Gebakken biet,
 Good.BakedBeetroot.PluralDisplayName,Gebakken bieten,
 Good.StuffedPepper.DisplayName,Gevulde paprika,
-Good.StuffedPepper.PluralDisplayName,Gevulde paprika’s,
+Good.StuffedPepper.PluralDisplayName,Gevulde paprika's,
 Good.Fuel.DisplayName,Brandstof,
 Good.Fuel.PluralDisplayName,Brandstof,
 Good.Lubricant.DisplayName,Smeermiddel,
 Good.Lubricant.PluralDisplayName,Smeermiddel,
 Manufactory.Recipe.FuelRadish,Brandstof (Radijsjes),
-Manufactory.Recipe.FuelBeetroot,Brandstof (Bieten),
+Manufactory.Recipe.FuelBeetroot,Brandstof (bieten),
 Manufactory.Recipe.FuelCanola,Brandstof (Canola zaden),
-Manufactory.Recipe.FuelCorn,Brandstof (Mais),
+Manufactory.Recipe.FuelCorn,Brandstof (Maïs),
 Manufactory.Recipe.FuelBadwater,Brandstof (Slechtwater),
-Building.HalfRoof1x1.DisplayName,Half Dak 1x1,
-Building.HalfRoof1x2.DisplayName,Half Dak 1x2,
-Building.HalfRoof2x1.DisplayName,Half Dak 2x1,
-Building.HalfRoof2x2.DisplayName,Half Dak 2x2,
+Building.HalfRoof1x1.DisplayName,Half-dak 1x1,
+Building.HalfRoof1x2.DisplayName,Half-dak 1x2,
+Building.HalfRoof2x1.DisplayName,Half-dak 2x1,
+Building.HalfRoof2x2.DisplayName,Half-dak 2x2,
 Building.Lodge.Emberpelts.FlavorDescription,Een loge was gewoon een loge.,
-Building.BigLodge.DisplayName,Grote Lodge,
-Building.BigLodge.Description,Drie keer zo groot als de Lodge.,
-Building.BigLodge.FlavorDescription,Meer dan genoeg ruimte.,
-Building.VerticalLodge.DisplayName,Verticale Lodge,
-Building.VerticalLodge.Description,Een lodge die omhoog is gebouwd,
+Building.BigLodge.DisplayName,Grote Hut,
+Building.BigLodge.Description,Drie keer zo groot als de Hut.,
+Building.BigLodge.FlavorDescription,Genoeg ruimte.,
+Building.VerticalLodge.DisplayName,Verticale Hut,
+Building.VerticalLodge.Description,Een hut die omhoog is gebouwd,
 Building.VerticalLodge.FlavorDescription,De mogelijkheden zijn onbegrensd!,
-Building.DoubleVerticalLodge.DisplayName,Dubbele verticale Lodge,
-Building.DoubleVerticalLodge.Description,Het lijkt wel alsof er twee op elkaar gestapelt zijn.,
-Building.DoubleVerticalLodge.FlavorDescription,Groter! Hoger!,
+Building.DoubleVerticalLodge.DisplayName,Dubbele verticale hut,
+Building.DoubleVerticalLodge.Description,Het lijkt wel alsof er twee op elkaar liggen.,
+Building.DoubleVerticalLodge.FlavorDescription,Groter! Langer!,
 Building.TenementLodge.DisplayName,Huurwoning,
 Building.TenementLodge.Description,Een zeer grote en hoge plaats om te overnachten.,
-Building.TenementLodge.FlavorDescription,Probeer de boel niet in de fik te steken.,
+Building.TenementLodge.FlavorDescription,Probeer de boel niet in brand te steken.,
 Building.Press.DisplayName,Pers,
 Building.Press.Description,Perst olie of sap uit geschikte planten.,
 Building.Press.FlavorDescription,"Nieuwsgierige kinderen gebruiken het om van alles te pletten, van koekjes tot dennenappels.",
 Building.Path2.DisplayName,Pad met leuningen,
 Building.Path2.Description,Dit pad heeft altijd een hek.,
-Building.Path3.DisplayName,Houten Pad,
+Building.Path3.DisplayName,Houten pad,
 Building.Path3.Description,Deze versie van het pad is gemaakt van hout.,
 Building.AutomatedWaterPump.DisplayName,Geautomatiseerde waterpomp,
 Building.AutomatedWaterPump.FlavorDescription,Geen bevers nodig!,
 Building.ClayPit.DisplayName,Kleiput,
 Building.ClayPit.Description,Een gemarkeerde plek om klei te verzamelen,
 Building.ClayPit.FlavorDescription,Het is rommelig werk.,
-Building.Kiln.DisplayName,Bakoven,
+Building.Kiln.DisplayName,Oven,
 Building.Kiln.Description,Maakt houtskool van boomstammen en stenen van klei.,
-Building.Kiln.FlavorDescription,Burn Baby!,
-Building.SmallEngine.DisplayName,Kleinen motor,
-Building.SmallEngine.FlavorDescription,"Een geweldige uitvinding, de Ijzertanden hebben waarschijnlijk ons ontwerp gekopieerd.",
+Building.Kiln.FlavorDescription,"Brand maar, schatje!",
+Building.SmallEngine.DisplayName,Kleine motor,
+Building.SmallEngine.FlavorDescription,"Een geweldige uitvinding, de Ijzertanden hebben ons ontwerp gejat!",
 Building.Engine.Emberpelts.FlavorDescription,Het stoken van steenkool vereist een verbeterd ontwerp.,
 Building.FuelEngine.DisplayName,Vloeibare brandstofmotor,
 Building.FuelEngine.FlavorDescription,Vloeibare brandstof is nog krachtiger voor het opwekken van energie.,
-Building.PowerShaftVerticalTIntersection.DisplayName,Krachtas verticale T-kruising,
-Building.PowerShaftUpwardTIntersection.DisplayName,Opwaartse krachtas T-kruising,
-Building.PowerShaftDownwardTIntersection.DisplayName,Neerwaartse krachtas T-kruising,
+Building.PowerShaftVerticalTIntersection.DisplayName,Verticale T-kruising van de krachtas,
+Building.PowerShaftUpwardTIntersection.DisplayName,Krachtas omhoog T-kruising,
+Building.PowerShaftDownwardTIntersection.DisplayName,Krachtas neerwaartse T-kruising,
+Building.Wonder.Emberpelts.DisplayName,Wonder van vuur,
+Building.Wonder.Emberpelts.Description,Verdeelt hulpbronnen over de aarde. Maakt de bevers in het gebied extra blij wanneer gelanceerd.,
+Building.Wonder.Emberpelts.FlavorDescription,Het lijkt mij een grote vuurplaats.,
 NaturalResource.AppleTree.DisplayName,Appelboom,
 NaturalResource.AppleTree.FlavorDescription,De zaden werden door reizigers uit verre landen meegebracht.,
-NaturalResource.Beetroot.DisplayName,Beet,
+NaturalResource.Beetroot.DisplayName,Biet,
 NaturalResource.Beetroot.FlavorDescription,Paars. Smaakt lekker als het in olie wordt gekookt en bedekt met siroop.,
 NaturalResource.Pepper.DisplayName,Paprika,
-NaturalResource.Pepper.FlavorDescription,Alleen de dappere eten dit rauw.,
+NaturalResource.Pepper.FlavorDescription,Alleen dappere eten dit rauw.,
 NaturalResource.Radish.DisplayName,Radijs,
 NaturalResource.Radish.FlavorDescription,Bitter. Je zou waarschijnlijk liever een wortel hebben.,
 NaturalResource.Tomato.DisplayName,Tomaat,
 NaturalResource.Tomato.FlavorDescription,Sappig,
 Need.Fire.DisplayName,Vuur,
+Need.DryFur.DisplayName,Droge vacht,
 ToolGroups.Clay,Klei,
 Building.DecorativeFloor.DisplayName,Decoratieve vloer,
 Building.DecorativeFloor.Description,Puur decoratieve vloerpanelen.,
+Building.LargeUndergroundTank.DisplayName,Ondergrondse tank,
+Building.UndergroundWarehouse.DisplayName,Ondergrondse opslagplaats,
+Building.IndustrialPile.DisplayName,Industriële stapel,
