--- a/Data/Localizations/Plugins/Timberborn.OldGopher.Pipe/nlNL_Pipe.csv
+++ b/Data/Localizations/Plugins/Timberborn.OldGopher.Pipe/nlNL_Pipe.csv
@@ -1,17 +1,17 @@
 ID,Text,Comment
-Building.PipeBox.DisplayName,Buis door Dijk,
-Building.PipeBox.Description,Een Buis door een Dijk,
-Building.PipeStraight.DisplayName,Buis Recht,
-Building.PipeStraight.Description,Verplaatst water,
-Building.PipeTurn.DisplayName,Buis Bocht,
-Building.PipeTurn.Description,Transfers water,
-Building.PipeTIntersection.DisplayName,Buis T-stuk,
-Building.PipeTIntersection.Description,Verplaatst water,
-Building.PipeXIntersection.DisplayName,Buis X-stuk,
-Building.PipeXIntersection.Description,Transfers water,
-Building.PipeUpward.DisplayName,Buis omhoog,
-Building.PipeUpward.Description,Verplaatst water,
-Building.PipeVertical.DisplayName,Verticale Buis,
-Building.PipeVertical.Description,Verplaatst water,
-Building.PipeDownward.DisplayName,Buis omlaag,
-Building.PipeDownward.Description,Transfers water,
+Building.PipeBox.DisplayName,Doos met buis,
+Building.PipeStraight.DisplayName,Buis recht,
+Building.PipeTurn.DisplayName,Buis hoek,
+Building.PipeTIntersection.DisplayName,Buis T-kruising,
+Building.PipeXIntersection.DisplayName,Buis X-kruising,
+Building.PipeUpward.DisplayName,Opwaartse Buis,
+Building.PipeVertical.DisplayName,Verticale buis,
+Building.PipeDownward.DisplayName,Neerwaartse Buis,
+Building.PipeBox.Description,Buis in een waterdicht blok.,
+Building.PipeValve.DisplayName,Buisklep,
+Building.PipeValve.Description,Giet water weg als het niet onder water is.,
+Building.PipeWaterPump.DisplayName,Doos met waterpomp,
+Building.PipeWaterPump.Description,Transporteert water met kracht tot een maximale diepte van 6 meter.,
+Building.PipeWaterPump.TakeToPipe,Leid water naar de leidingen.,
+Building.PipeWaterPump.TakeFromPipe,Haal water uit de leidingen.,
+Building.PipeGeneric.Description,Transporteert water.,
