--- a/Data/Localizations/Plugins/eMka.ModSettings/nlNL_ModSettings.csv
+++ b/Data/Localizations/Plugins/eMka.ModSettings/nlNL_ModSettings.csv
@@ -1,3 +1,6 @@
 ID,Text,Comment
+ModSettingsBox.GameNotChangeable,Kan niet worden gewijzigd tijdens het spel,Shown as a tooltip over the mod settings that can't be changed during the game
+ModSettingsBox.MainMenuNotChangeable,Kan niet worden gewijzigd in het hoofdmenu,"Same as above, but for the main menu"
+ModSettingsBox.MapEditorNotChangeable,Kan niet worden gewijzigd in de kaarteditor,"Same as above, but for the map editor"
 ModSettingsBox.ResetMessage,Wilt u alle instellingen terugzetten naar de standaardinstellingen?,
-ModSettingsBox.ResetToDefault,Naar standaardwaarden resetten,
+ModSettingsBox.ResetToDefault,Resetten naar standaard,
