--- a/Data/Localizations/Plugins/Emberpelts/nlNL_Emberpelts.csv
+++ b/Data/Localizations/Plugins/Emberpelts/nlNL_Emberpelts.csv
@@ -1,10 +1,9 @@
 ID,Text,Comment
 Faction.Emberpelts.DisplayName,Emberpelts,Name of a faction
-Faction.Emberpelts.Description,"De Emberpelts hebben een affiniteit met de kleur rood en houden ervan om warm te blijven. Soms kijken ze gewoon graag naar dingen die branden.
+Faction.Emberpelts.Description,"De Emberpelts hebben een affiniteit met de kleur rood en houden ervan om warm te blijven. Soms kijken ze gewoon graag naar dingen die in brand staan.
+Ze houden er niet van om hun vacht nat te maken.
 Hun motto: <i>Harten van vuur.</i>",Description of a beaver faction
-Faction.Emberpelts.WonderCompletionFlavor,"Nadat ze grote rijkdom en kennis hadden verzameld, probeerden je bevers de vruchten van hun arbeid te delen met de lijdende planeet. Helaas ging het allemaal in vlammen op. Je bevers hebben tenminste dingen zien branden!",
-Faction.Emberpelts.WonderCompletionMessage,Gefeliciteerd! Je hebt Emberpelts onder de knie en hebt de grondstoffen van deze kaart gebruikt om het wonder van de factie te bouwen.,
-Bot.DisplayName.Emberpelts,Emberrobot {0},Bot name
+Bot.DisplayName.Emberpelts,Menselijke stok {0},Bot name
 Good.Brick.DisplayName,Baksteen,Item Name
 Good.Brick.PluralDisplayName,Stenen,Plural Item Name
 Good.Clay.DisplayName,Klei,Item Name
@@ -63,7 +62,7 @@ Building.BigLodge.FlavorDescription,Genoeg ruimte.,
 Building.VerticalLodge.DisplayName,Verticale Hut,
 Building.VerticalLodge.Description,Een hut die omhoog is gebouwd,
 Building.VerticalLodge.FlavorDescription,De mogelijkheden zijn onbegrensd!,
-Building.DoubleVerticalLodge.DisplayName,Dubbele verticale hut,
+Building.DoubleVerticalLodge.DisplayName,Dubbele verticale Hut,
 Building.DoubleVerticalLodge.Description,Het lijkt wel alsof er twee op elkaar liggen.,
 Building.DoubleVerticalLodge.FlavorDescription,Groter! Langer!,
 Building.TenementLodge.DisplayName,Huurwoning,
@@ -92,15 +91,17 @@ Building.FuelEngine.FlavorDescription,Vloeibare brandstof is nog krachtiger voor
 Building.PowerShaftVerticalTIntersection.DisplayName,Verticale T-kruising van de krachtas,
 Building.PowerShaftUpwardTIntersection.DisplayName,Krachtas omhoog T-kruising,
 Building.PowerShaftDownwardTIntersection.DisplayName,Krachtas neerwaartse T-kruising,
-Building.Wonder.Emberpelts.DisplayName,Wonder van vuur,
-Building.Wonder.Emberpelts.Description,Verdeelt hulpbronnen over de aarde. Maakt de bevers in het gebied extra blij wanneer gelanceerd.,
-Building.Wonder.Emberpelts.FlavorDescription,Het lijkt mij een grote vuurplaats.,
+Building.DecorativeFloor.DisplayName,Decoratieve vloer,
+Building.DecorativeFloor.Description,Puur decoratieve vloerpanelen.,
+Building.LargeUndergroundTank.DisplayName,Ondergrondse tank,
+Building.UndergroundWarehouse.DisplayName,Ondergrondse opslagplaats,
+Building.IndustrialPile.DisplayName,Industriële stapel,
 NaturalResource.AppleTree.DisplayName,Appelboom,
 NaturalResource.AppleTree.FlavorDescription,De zaden werden door reizigers uit verre landen meegebracht.,
 NaturalResource.Beetroot.DisplayName,Biet,
 NaturalResource.Beetroot.FlavorDescription,Paars. Smaakt lekker als het in olie wordt gekookt en bedekt met siroop.,
 NaturalResource.Pepper.DisplayName,Paprika,
-NaturalResource.Pepper.FlavorDescription,Alleen dappere eten dit rauw.,
+NaturalResource.Pepper.FlavorDescription,Alleen de dappere eten dit rauw.,
 NaturalResource.Radish.DisplayName,Radijs,
 NaturalResource.Radish.FlavorDescription,Bitter. Je zou waarschijnlijk liever een wortel hebben.,
 NaturalResource.Tomato.DisplayName,Tomaat,
@@ -108,8 +109,22 @@ NaturalResource.Tomato.FlavorDescription,Sappig,
 Need.Fire.DisplayName,Vuur,
 Need.DryFur.DisplayName,Droge vacht,
 ToolGroups.Clay,Klei,
-Building.DecorativeFloor.DisplayName,Decoratieve vloer,
-Building.DecorativeFloor.Description,Puur decoratieve vloerpanelen.,
-Building.LargeUndergroundTank.DisplayName,Ondergrondse tank,
-Building.UndergroundWarehouse.DisplayName,Ondergrondse opslagplaats,
-Building.IndustrialPile.DisplayName,Industriële stapel,
+Building.Wonder.Emberpelts.DisplayName,Wonder van vuur,
+Building.Wonder.Emberpelts.Description,Verdeelt hulpbronnen over de aarde. Maakt de bevers in het gebied extra blij wanneer gelanceerd.,
+Building.Wonder.Emberpelts.FlavorDescription,Het lijkt mij een grote vuurplaats.,
+Faction.Emberpelts.WonderCompletionFlavor,"Nadat ze grote rijkdom en kennis hadden verzameld, probeerden je bevers de vruchten van hun arbeid te delen met de lijdende planeet. Helaas ging het allemaal in vlammen op. Je bevers hebben tenminste dingen zien branden!",
+Faction.Emberpelts.WonderCompletionMessage,Gefeliciteerd! Je hebt Emberpelts onder de knie en hebt de grondstoffen van deze kaart gebruikt om het wonder van de factie te bouwen.,
+Building.LumberMill.Large.DisplayName,Grote houtzagerij,
+Building.Smelter.Large.DisplayName,Grote Smelterij,
+Building.GearWorkshop.Large.DisplayName,Grote tandwielwerkplaats,
+Good.PhoenixEssence.DisplayName,Feniks Essentie,
+Good.PhoenixEssence.PluralDisplayName,Feniks Essentie,
+Need.Juice.DisplayName,Sap,
+Building.Floodgate.Flat.DisplayName,Vlakke bovenkant sluisdeur,
+Building.DoubleFloodgate.Flat.DisplayName,Dubbele sluisdeur met platte bovenkant,
+Building.TripleFloodgate.Flat.DisplayName,Platte bovenkant drievoudige sluisdeur,
+Building.Floodgate.Flat.Description,"Blokkeert water tot een verstelbare hoogte. Een nieuw, compacter ontwerp zodat u er bovenop kunt bouwen.",
+Building.PhoenixDistillery.DisplayName,Phoenix-distilleerderij,
+Building.PhoenixDistillery.Description,Voor de productie van Phoenix Essence,
+Manufactory.Recipe.BadwaterRig.PurifiedWater,Gezuiverd water,
+Manufactory.Recipe.BadwaterRig.ForcedExtraction,Gedwongen verwijdering van badwater,
