--- a/Data/Localizations/Plugins/eMka.Minimap/nlNL_Minimap.csv
+++ b/Data/Localizations/Plugins/eMka.Minimap/nlNL_Minimap.csv
@@ -10,10 +10,13 @@ eMka.Minimap.Settings.DeadTreeColor,Dode boom,
 eMka.Minimap.Settings.DeepBadwaterColor,Diep slechtwater,
 eMka.Minimap.Settings.DeepWaterColor,Diep water,
 eMka.Minimap.Settings.DisableSize,Toon geen minimap voor kaarten met zijden kleiner dan,
+eMka.Minimap.Settings.GeneralSettings,Algemeen,
 eMka.Minimap.Settings.HighestGrassColor,Hoogste gras,
 eMka.Minimap.Settings.HighestTerrainColor,Hoogste terrein,
 eMka.Minimap.Settings.LowestGrassColor,Laagste gras,
 eMka.Minimap.Settings.LowestTerrainColor,Laagste terrein,
+eMka.Minimap.Settings.MinimapRotation,Draai minimap,
+eMka.Minimap.Settings.MinimapRotationHeader,Minimap-rotatie,
 eMka.Minimap.Settings.PathColor,Pad,
 eMka.Minimap.Settings.PlantColor,Plant,
 eMka.Minimap.Settings.ShallowBadwaterColor,Ondiep slechtwater,
